[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tossinvest-cli"
version = "0.4.1"
description = "토스증권 Open API CLI/REPL — 시세 조회부터 주문까지 (비공식)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "zihado", email = "zihado@gmail.com" }]
keywords = ["toss", "tossinvest", "토스증권", "trading", "stock", "cli", "repl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "Natural Language :: Korean",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "plotext>=5.2",
]

[project.urls]
Homepage = "https://github.com/rescenedev/tossinvest-cli"
Repository = "https://github.com/rescenedev/tossinvest-cli"
Issues = "https://github.com/rescenedev/tossinvest-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[project.scripts]
toss = "toss_cli.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/toss_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "src/toss_cli",
    "tests",
    "docs/openapi.json",
    "README.md",
    "LICENSE",
    ".env.example",
]
# 자격증명/로컬 상태는 어떤 경우에도 배포물에 포함하지 않는다.
exclude = [".env", ".env.local", "**/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
